--- a/index.html
+++ b/index.html
@@ -1,125 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Real-time Noise Suppression with dtln-rs</title>
-    </head>
-    <body>
-        <div class="audio-container">
-            <div class="audio-section">
-                <span>Unprocessed Audio</span>
-                <div><audio id="rawAudio" controls></audio></div>
-            </div>
-            <div class="audio-section">
-                <span>Processed Audio</span>
-                <div><audio id="denoisedAudio" controls></audio></div>
-            </div>
-        </div>
-        <div class="button-container">
-            <button id="btnStart" onclick="startRecording()">
-                Start Recording
-            </button>
-            <button id="btnStop" disabled onclick="stopRecording()">
-                Stop Recording
-            </button>
-            <button id="btnDenoise" onclick="denoise()">Denoise Audio</button>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Real-time Noise Suppression with dtln-rs</title>
+    <script src="./src/app.js" type="module"></script>
+    <style>
+      .audio-container {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 20px;
+      }
 
-        <style>
-            .audio-container {
-                display: flex;
-                justify-content: space-around;
-                margin-bottom: 20px;
-            }
+      .audio-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
 
-            .audio-section {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
+      .audio-section span {
+        margin-bottom: 10px;
+      }
 
-            .audio-section span {
-                margin-bottom: 10px;
-            }
-
-            .button-container {
-                display: flex;
-                justify-content: center;
-                gap: 10px;
-            }
-        </style>
-
-        <script>
-            const DEFAULT_TARGET_SAMPLE_RATE = 16000;
-
-            let audioStream;
-            let audioChunks = [];
-            let rawAudio = document.getElementById("rawAudio");
-            let denoisedAudio = document.getElementById("denoisedAudio");
-            let btnStart = document.getElementById("btnStart");
-            let btnStop = document.getElementById("btnStop");
-            let btnDenoise = document.getElementById("btnDenoise");
-            let audioContext = null;
-            let stream = null;
-            let source = null;
-            let destination = null;
-
-            let suppressionWorkletNode = null;
-
-            async function startRecording() {
-                // Get audio stream from the user's microphone
-                audioStream = await navigator.mediaDevices.getUserMedia({
-                    audio: true,
-                });
-
-                if (!audioContext) {
-                    audioContext = new AudioContext({
-                        sampleRate: DEFAULT_TARGET_SAMPLE_RATE,
-                    });
-                }
-
-                // Create a MediaStreamAudioSourceNode from the stream
-                source = audioContext.createMediaStreamSource(audioStream);
-                destination = audioContext.createMediaStreamDestination();
-
-                console.log(
-                    "Noise suppression module initialized. Starting worklet."
-                );
-
-                if (!suppressionWorkletNode) {
-                    audioContext.audioWorklet
-                        .addModule("./build/NoiseSuppressionWorker.js")
-                        .then(() => {
-                            suppressionWorkletNode = new AudioWorkletNode(
-                                audioContext,
-                                "denoiser"
-                            );
-                            suppressionWorkletNode.port.onmessage = (event) => {
-                                // Metrics are received here.
-                                console.log(event.data);
-                            };
-                        });
-                } else if (destination) {
-                    source.connect(suppressionWorkletNode).connect(destination);
-                }
-
-                audioStream.getAudioTracks()[0].enabled = true;
-
-                btnStart.disabled = true;
-                btnStop.disabled = false;
-            }
-
-            function stopRecording() {
-                audioStream.getTracks().forEach((track) => track.stop());
-
-                denoisedAudio.srcObject = destination.stream;
-
-                btnStart.disabled = false;
-                btnStop.disabled = true;
-            }
-
-            async function denoise() {}
-        </script>
-    </body>
+      .button-container {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="audio-container">
+      <div class="audio-section">
+        <span>Unprocessed Audio</span>
+        <div><audio id="rawAudio" controls></audio></div>
+      </div>
+      <div class="audio-section">
+        <span>Processed Audio</span>
+        <div><audio id="denoisedAudio" controls></audio></div>
+      </div>
+    </div>
+    <div class="button-container">
+      <button id="btnStart">Start Recording</button>
+      <button id="btnStop" disabled>Stop Recording</button>
+      <button id="btnDenoise">Denoise Audio</button>
+    </div>
+  </body>
 </html>
