--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
     </div>
     <div class="button-container">
+      <button id="loadClip" disabled>Load Clip</button>
       <button id="btnStart">Start Recording</button>
       <button id="btnStop" disabled>Stop Recording</button>
     </div>
